--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -3,67 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mission to Mars</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
-    <style>
-        h1 {
-            color: navy;
-            font-size: 45px;
-            font-weight: bold;
-            /* font-style: italic; */
-            /* text-align:center; */
-        }
-
-        h2 {
-            /* color:lightcyan; */
-            font-size: 24px;
-            text-align: left;
-        }
-
-        h3 {
-            color: black;
-            font-size: 18px;
-            /* text-decoration: underline; */
-            /* font-style: italic; */
-            text-align: left;
-        }
-
-        h4 {
-            color: black;
-            font-size: 22px;
-            font-weight: bold;
-            /* text-decoration: underline; */
-            /* font-style: italic; */
-            text-align: center;
-        }
-
-        body {
-            width: 100%;
-            min-height: 100%;
-            background-color: white;
-        }
-
-        img {
-            width: 100%;
-        }
-
-        .boxborder {
-            /* background: lightgray; */
-            padding: 10px;
-            border: lightgray 2px solid;
-        }
-
-        .boxmargin {
-            /* background: lightgray; */
-            padding: 2px;
-            border: lightgray 2px solid;
-            margin: 10px 0px 10px 0px;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Mars data</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 
 <body>
@@ -72,40 +16,51 @@
             <h1>Mission to Mars</h1>
             <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
         </div>
+
         <div class="row">
-            <div class="col col-12">
+            <div class="col-lg-12">
                 <h2>Latest Mars News</h2>
-                <h3>{{mars.news_title}}</h3>
-                {{mars.news_p}}
+                <h3>{{ mars.news_title }}</h3>
+                <p>{{ mars.news_p}}</p>
             </div>
         </div>
+
+
         <div class="row">
-            <div class="col col-8">
+            <div class="col-lg-6">
                 <h2>Featured Mars Image</h2>
-                <img src={{mars.featured_image_url}} alt="Featured image"
-                <br>
-                <h3>Mars Facts</h3>
-                {{mars.facts| safe}}
+                <img src="{{ mars.featured_image_url}}">
+            </div>
+            <div class="col-lg-1">
+
+            </div>
+            <div class="col-lg-4">
+                <h2>Mars Facts</h2>
+                {{mars_info.table_html | safe}}
             </div>
         </div>
-        <br><br>
+
         <div class="row">
-            <div class="col col-12">
-                <h4>Mars Hemisphere</h4>
+            <div class="col-lg-12">
+                <h2>Mars Hemisphere</h2>
+                <hr>
             </div>
         </div>
-        <hr>
+
         <div class="row">
-            {% for image_url in  mars.hemispheres %}
-            <div class="col col-6">
-                <div class="boxmargin">
-                    <img src={{mars.img_url}} alt={{mars.img_url}}>
-                    <h3>{{mars.title}}</h3>
+            {% for hemispheres in mars.hemispheres %}
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="{{ img_url }}" class="card-img-top image-photos" alt="...">
+                        <h3 class="card-title">{{ hemisphere.title }} Enhanced</h3>
+                    </div>
                 </div>
             </div>
             {% endfor %}
         </div>
-    </div> <!-- End of container -->
+
+    </div>
 </body>
 
 </html>
